gke/gcloud/cilium/namespaces/base/network-default-deny-all.yaml
# Copyright (C) 2019 Skale-5 <ops@skale-5.com>
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  ingress: []
